# uniskill

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  cliff.toml  config.toml.example  uniskill.toml
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile  Dockerfile.dev
docs/: DESIGN.md  DESIGN_VIRTUAL_BUNDLES.md  USER_JOURNEY.md
samples/skills-bundle/: meta.toml
samples/skills-bundle/skills/caveman/: SKILL.md
samples/skills-bundle/skills/code-design/: SKILL.md
scripts/: host-triple.sh
src/: cli.rs  config.rs  error.rs  fetcher.rs  harnesses.rs  hook.rs  linker.rs  main.rs  skill.rs  state.rs  sync.rs  worktree.rs
uniskill-bundle/: meta.toml
uniskill-bundle/skills/uniskill-dev/: SKILL.md
