[package]
name = "uniskill"
version = "0.1.0"
edition = "2021"
description = "Wire skill bundles from one source into multiple agent harnesses"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
clap = { version = "4", features = ["derive"] }
dirs = "6"
thiserror = "2"
anyhow = "1"
ureq = { version = "2", default-features = false, features = ["rustls"] }

[dev-dependencies]
tempfile = "3"
tiny_http = "0.12"
